# esuna

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  compose.yaml  package-lock.json
.claude/: README.md  architecture.md  development-guide.md  future-features.md  implementation-progress.md  todo.md  troubleshooting.md
.github/workflows/: ci.yml  deploy.yml
backend/: package-lock.json  package.json  pyproject.toml  wrangler.toml
backend/app/: __init__.py  main.py
backend/app/scrapers/: __init__.py  aozora.py  fivech.py  hatena.py  podcast.py  radio.py  sns.py
backend/src/: index.ts  types.ts
backend/src/middleware/: ssrf.ts
backend/src/scrapers/: aozora.ts  fivech.ts  hatena.ts  podcast.ts  radio.ts  sns.ts
docs/: architecture.md  development.md  features.md  overview.md  platforms.md  progress.md  roadmap.md  status-matrix.md  troubleshooting.md  user-guide.md
frontend/: index.html  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  env.d.ts  index.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AutoplayPlayer.tsx  AutoplaySettings.tsx  ContentReader.tsx  ContinueReading.tsx  FavoritesList.tsx  FivechBoardList.tsx  FivechPostReader.tsx  FivechThreadList.tsx  GridSystem.tsx  HatenaCommentReader.tsx  HatenaEntryReader.tsx  NovelList.tsx  NovelReader.tsx  PodcastList.tsx  PodcastPlayer.tsx  RSSArticleReader.tsx  RSSFeedList.tsx  RadioPlayer.tsx  RadioStationList.tsx  SNSPostReader.tsx  StatusMessage.tsx  TimerManager.tsx  VoiceMemoRecorder.tsx
frontend/src/lib/: api-client.ts  (+18 more)
(+1 files in other folders)
